<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
            android:id="@+id/action_addNote"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:icon="@drawable/btn_add_note"
            android:title="@string/action_addNote"/>

    <item
            android:id="@+id/action_info"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:icon="@drawable/btn_info"
            android:title="@string/action_info"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/btn_settings"
        android:title="@string/action_settings"/>

    <item
            android:id="@+id/action_exit"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:icon="@drawable/btn_exit"
            android:title="@string/action_exit"/>

</menu>