<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" >
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">

         <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tvInfoMainButtons"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_add_note"/>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tvInfoAddNote"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_info"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tvInfoInfo"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_settings"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tvInfoSettings"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_exit"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tvInfoExit"/>
        </LinearLayout>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tvInfoOtherButtons"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
             <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_back"/>
             <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tvInfoBack"/>
        </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
                <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_save"/>
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tvInfoSave"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
                <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_remove"/>
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tvInfoRemove"/>
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvInfoCaption"
                    android:id="@+id/tvInfoCaption"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvInfoText"
                    android:id="@+id/tvInfoText"/>

        </LinearLayout>

    </ScrollView>

<!--
    <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_back"
            android:onClick="btnInfoBackOnClick"
            android:id="@+id/btnInfoBack"/>
-->

</LinearLayout>