<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >


    <LinearLayout
            android:id="@+id/layoutButtons"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAddNoteCaption"
                android:id="@+id/btnAddNote"
                android:src="@drawable/btn_add_note"
                android:onClick="btnAddNoteOnClick"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnInfoCaption"
                android:id="@+id/btnInfo"
                android:src="@drawable/btn_info"
                android:onClick="btnInfoOnClick"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSettingsCaption"
                android:id="@+id/btnSettings"
                android:src="@drawable/btn_settings"
                android:onClick="btnSettingsOnClick"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnExitCaption"
                android:id="@+id/btnExit"
                android:src="@drawable/btn_exit"
                android:onClick="btnExitOnClick"/>
    </LinearLayout>


    <ListView
            android:layout_below="@id/layoutButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewNotes"/>

</RelativeLayout>